# Montra-Acquire

./: .gitignore  README.md  build_exe.py
montra-acquire/: main_acquisition.py  pyproject.toml
montra-acquire/examples/protocols/: README.md  zebrafish_single_tracking.acq
montra-acquire/montra_acquire/: daq.py  script_engine.py
montra-acquire/montra_acquire/ui/: __init__.py  acquisition_tab.py  acquisition_window.py  script_help_dialog.py  script_highlighter.py
montra-acquire/montra_acquire/ui/docking/: console_dock.py
montra-acquire/montra_acquire/ui/utils/: camera_preview_label.py  common.py  drag_spinbox.py  themes.py
montra-acquire/montra_acquire/ui/workers/: acquisition_worker.py  camera_worker.py
montra-lib/: pyproject.toml
montra-lib/montra/: app_paths.py  version.py
montra-lib/montra/io/: Camera.py  FLIRCamera.py  IDSCamera.py  OpenCVCamera.py  TestCamera.py  __init__.py
montra-lib/montra/tracker/: roi.py
